@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.zkouknito.cz"
        name="zkouknito.cz"
-       version="1.0.0"
-       provider-name="lzoubek">
+       version="1.0.1"
+       provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.0.5"/>
+    <import addon="script.module.stream.resolver" version="1.1.5"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
