@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+	<string id="31000">Data o použití jsou zaslána pouze v okamžiku, kdy spustíte přehrávání nebo stahování videa doplňkem. Data jsou zaslána celkem dvakrát. Autorovi doplňku a provozovateli stránek zkouknito.cz</string>
+</strings>
