@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+	<string id="31000">Usage of plugin is tracked whenever you play or download video. Data is being sent twice. First is for author of addon, second for zkouknito.cz site admins.</string>
+</strings>
