@@ -1,2 +1,4 @@
+[B]1.0.1:[/B]
+- přidán Usage Tracking
 [B]1.0.0:[/B]
 Initial version
